@@ -728,7 +728,8 @@ input[type=checkbox].es_dlc_selection:checked + label {
 .es_active_total {
 	float: right;
 	text-align: center;
-	padding-top: 6px;
+	padding-top: 4px;
+	font-size: 12px;
 }
 .birthday {
 	 position: absolute;
