@@ -1,6 +1,7 @@
 v6.5
 -----
 : Fixed a bug that caused achievement sorting not to work correctly
+: Fixed active market listing total to work with new data format
 
 
 v6.4.1
